small corrections in chapter 1

--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -44,9 +44,9 @@ But things change when your application reaches "the cliff of complexity"
 
 But what do we mean by complexity? 
 Getting a clear definition is not an easy task
-^[Ironic right?] 
+^[Ironic, right?] 
 as it very much depends on who is concerned and who you are talking to.
-But a good definition can be found in _The DevOps Handbook_ [@genekim2016] : _"One of the defining characteristics of a complex system is that it __defies any single person's ability to see the system as a whole and understand how all the pieces fit together__. Complex system typically have a high degree of interconnectedness of tightly coupled components, and system-level behavior cannot be explained merely in terms of the behavior of the system components."_ (we underlined).
+But a good definition can be found in _The DevOps Handbook_ [@genekim2016]: _"One of the defining characteristics of a complex system is that it __defies any single person's ability to see the system as a whole and understand how all the pieces fit together__. Complex system typically have a high degree of interconnectedness of tightly coupled components, and system-level behavior cannot be explained merely in terms of the behavior of the system components."_ (we underlined).
 
 Or as noted in "Refactoring at Scale" [@lemaire2020], "_It becomes nearly impossible to reason about the effect a change might have when applied uniformly across a sprawling, complex system. Many tools exist to identify code smells or automatically detect improvements within subsections of code, but we are largely unable to automate human reasoning about how to restructure large applications,in codebases that are growing at an increasingly rapid pace._"
 
@@ -75,7 +75,7 @@ One of the goal of this book is to present you a methodology and toolkit that wi
 
 #### Customers and users complexity
 
-Customers and end user see complexity as _interface complexity_. 
+Customers and end users see complexity as _interface complexity_. 
 
 Interface complexity can be driven by a lot of elements, for example the probability of making an error while using the app, the difficulty to understand the logical progression in the app, the presence of unfamiliar behavior or terms, visual distractions...
 This book will also bring you strategy to help you cope with the need for simplification when it comes to designing interface. 
@@ -92,7 +92,7 @@ This behavior lowers the interface complexity: users do not have to really think
 But this kind of pattern can make the application perform too much computation, for example because users rarely go to the value they need on their first try: they usually miss what value they actually want to select. 
 
 One solution can be to delay reactivity or to cache things so that R computes fewer things. 
-But that comes with a cost: handling delayed reactivity and caching elements increases implementation complexity. 
+But that comes with a cost: handling delayed reactivity and caching elements increase implementation complexity. 
 Another solution is to add an "update plot" button, which updates the plot only when the user clicks on it. 
 This pattern makes it easier to control reactivity from an implementation side. 
 But this can make the interface a little bit more complex for the users, who have to perform another action, on top of changing their inputs. 
@@ -105,7 +105,7 @@ But allowing this behavior leads to bugs, notably in a context of full reactivit
 Handling this special case is completely doable: with a little bit of craft, you can watch what the user inputs and throw an error if the start is after the end
 ^[See [shiny/issues/2043#issuecomment-525640738](https://github.com/rstudio/shiny/issues/2043#issuecomment-525640738){target="_blank"} for an example]
 .
-On one hand that solution increases implementation complexity, while on the other leaving this naive behavior requires the user to think carefully about what they are selecting, thus increasing the interface complexity.
+On one hand that solution increases implementation complexity, while on the other hand letting this naive behavior requires the user to think carefully about what they are selecting, thus increasing the interface complexity.
 
 So what should we do? 
 It's up to you: deciding where to draw the line between interface & implementation complexity very much depends of the project, but that is something that you should keep in mind all along the project's life.
@@ -123,13 +123,13 @@ But before that, let's dive into code complexity.
 
 #### Codebase size
 
-The total number of lines of code, or the number of files, can be good clue of potential complexity, but only if used as order of magnitude (for example a 10.000-line codebase is potentially more complex than a 100-line codebase), but should not be relied on if used strictly: even more if you try to reduce this number of line by sacrificing code readability.
+The total number of lines of code, or the number of files, can be good clue of potential complexity, but only if used as order of magnitude (for example a 10,000-line codebase is potentially more complex than a 100-line codebase), but should not be relied on if used strictly, even more if you try to reduce this number of line by sacrificing code readability.
 
 R is very permissive when it comes to indentation and line breaks, and, unlike JavaScript or CSS, it is generally not minified
 ^[The minification process is the process of removing all blank characters and put everything on one line so that the file in the output is much smaller.]
 .  
 In R, the number of lines of code depends on your coding style and the packages you are using. 
-For example, the `{tidyverse}` [@tidyverse2019] style guide encourages the use of `%>%` (called "pipe"), with one function by line, producing more lines in the end code : "_`%>%` should always have a space before it, and should usually be followed by a new line_" [tidyverse style guide](https://style.tidyverse.org/pipes.html){target="_blank"}.
+For example, the `{tidyverse}` [@tidyverse2019] style guide encourages the use of `%>%` (called "pipe"), with one function by line, producing more lines in the end code: "_`%>%` should always have a space before it, and should usually be followed by a new line_" [tidyverse style guide](https://style.tidyverse.org/pipes.html){target="_blank"}.
 So you can expect a "tidyverse-centric" package to contain more lines of code, yet the pipe itself has been thought as a tool to lower code complexity by enhancing its readability^[Note though that some users find using the pipe more complex than not.].
 
 For example, the two following pieces of code do the same thing. 
@@ -165,7 +165,7 @@ iris[1:5, "Species"]
 
 In other words, using this kind of writing style can make the code base larger in term of lines, without really adding complexity to the general program. 
 
-Another drawback of this metric is that it focuses on numbers instead of readability, and in the long run, yes, readability matters
+Another drawback of this metric is that it focuses on numbers instead of readability, and in the long run, yes, readability matters.
 As noted in _The Art of Unix Programming_ [@ericraymond2003], "Chapter 13: Speaking of Complexity", "_Pressure to keep the codebase size down by using extremely dense and complicated implementation techniques can cause a cascade of implementation complexity in the system, leading to an un-debuggable mess_".
 
 Still, this metric can be useful to reinforce what you have learned from other metrics.
@@ -176,7 +176,7 @@ And numerous files can also be a sign of maintenance complexity, as it may be ha
 ^[
 To handle the complexity of splitting into files, you can set filenames to follow the structure of the project. This pattern is developed in another part of this book, where we explicit the conventions used in `{golem}`.
 ]. 
-On the other hand, one big 10.000-lines file which is standing alone in the project is not a good sign either. 
+On the other hand, one big 10,000-lines file which is standing alone in the project is not a good sign either. 
 
 If you want to use the number of lines metric, you can do it from R with the `{cloc}` [@R-cloc] package, available at <https://github.com/hrbrmstr/cloc>.
 
@@ -245,8 +245,8 @@ knitr::include_graphics("img/controlflow.png")
 ```
 
 _(The following paragraph details the algorithm implementation, feel free to skip it if you are not interested in the implementation details)_  
-The complexity number is then computed by taking the number of nodes, subtracting the number of edges, plus two times the number of connected components of this graph. 
-The algorithm is then $M = E − N + 2P$, where $M$ is the measure, $E$ the number of edges, $N$ the number of nodes and $2P$ is 2 time the number of connected components.
+The complexity number is then computed by taking the number of nodes, subtracting the number of edges, and adding twice the number of connected components of this graph. 
+The algorithm is then $M = E − N + 2P$, where $M$ is the measure, $E$ the number of edges, $N$ the number of nodes and $2P$ is twice the number of connected components.
 We will not go deep into this topic, as there are a lot things going on in this computation and you can find many documentation about this online.
 Please refer to the bibliography for further readings about the theory behind this measurement. 
 
@@ -379,7 +379,7 @@ frame_shiny <- readr::read_rds(here::here("dataset", "frame_shiny.rds"))
 knitr::kable(frame_shiny)
 ```
 
-If you are building you Shiny application with `{golem}`, you can use the `DESCRIPTION` file, which contains the list of dependencies, as a starting point to explore these metrics for your dependencies, for example using `{desc}` [@R-desc] or `{attachment}` [@R-attachment]:
+If you are building your Shiny application with `{golem}`, you can use the `DESCRIPTION` file, which contains the list of dependencies, as a starting point to explore these metrics for your dependencies, for example using `{desc}` [@R-desc] or `{attachment}` [@R-attachment]:
 
 ```{r 01-big-shiny-27 }
 desc::desc_get_deps("golex/DESCRIPTION")
@@ -427,7 +427,7 @@ First of all, an app is successful if it was delivered.
 In other words, the developer team was able to move from specification to implementation to testing to delivering. 
 This is a very engineering-oriented definition of success, but it is a pragmatic one: an app that never reaches the state of usability is not a successful app, and something along the way has blocked the process of finishing the software. 
 
-This condition implies a lot of things, but mostly it implies that the team was able to organize itself in an efficient way, so that they were able to work together in making the project a success. 
+This condition implies a lot of things, but mostly it implies that the team members were able to organize themselves in an efficient way, so that they were able to work together in making the project a success. 
 Anybody that has already worked on a code base as a team knows it is not an easy task.
 
 ### It is accurate
@@ -442,7 +442,7 @@ Just as before, accuracy means that between the moment the idea appears in someo
 Being usable means that the app was delivered, it serves the purpose, and it is user-friendly.
 
 Unless you are just coding for the joy of coding, there will always be one or more end users. 
-And if these people cannot use the application because it is too hard to use, too hard to understand, because it is too slow or there is no inherent logic in how the user experience is designed, then it is inappropriate to call the app is a success. 
+And if these people cannot use the application because it is too hard to use, too hard to understand, because it is too slow or there is no inherent logic in how the user experience is designed, then it is inappropriate to call the app a success. 
 
 ### It is immortal
 
