--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -784,8 +784,15 @@ In this section you will find a suggestion for a naming convention for your app 
 Splitting files is good.
 Splitting files using a defined convention is better. 
 Why? 
-Because using a common convention for your files helps the other developers (and potentially you) to know exactly what is contained in a specific file. 
-Using a convention allows everyone to know where to look when debugging and implementing new features. 
+Because using a common convention for your files helps the other developers (and potentially you) to know exactly what is contained in a specific file, making it easier to navigate through the codebase, be it for new-comers or for developers already familiar with the software.
+
+As developed in "Refactoring at Scale" [@lemaire2020], lacking a defined file structure when it comes to codebase leads to a slower productivity on the long run, notably when new engineers join the team: engineers with a knowledge of the file structure have learned how to navigate through the codebase, but new comers will find it hard to understand how everything is organized.
+And of course, on the long run, even developers with a knowledge of the structure can get lost, even more if getting back to a project that they have not 
+
+> Because it’s easier to maintain the status quo, instead of proactively beginning to organize related files [...], engineers instead learn to navigate the increasingly sprawling code. New engineers introduced to the growing chaos raise a warning flag and encourage the team to begin splitting up the code, but these concerns fall to deaf ears [...]. 
+Eventually, the codebase reaches a critical mass where the persistent lack of organization has dramatically slowed productivity across the engineering team. Only then does the team take the time to draft a plan for grooming the codebase, at which point the number of variables to consider is far greater than had they made a concerted effort to tackle the problem months (or even years) earlier.
+
+Using a convention allows everyone to know where to look when debugging, refactoring, or implementing new features. 
 For example, if you follow `{golem}`'s convention (which is the one developed in this section), you will know immediately that a file starting with `mod_` contains a module. 
 If you take over a project, look in the `R/` folder, and see files starting with these three letters, you will know immediately that these files contain modules.
 
