Small paragraph about how to chose a DB backend

--- a/16-common-app-caveats.Rmd
+++ b/16-common-app-caveats.Rmd
@@ -669,6 +669,13 @@ On the other hand, if you decide to switch these data to an external database, i
 So, schematically, if the database needs 300mb, and one shiny app 50mb, then 10 app will be 300mb + 50 * 1b mo. 
 Of course, it is not as simplistic as that, and other things are to be considered: making database requests can be computationally expensive, and might need some network adjustments, but you get the idea. 
 
+How do one chose between database backend? 
+Well, first of all you need to see what is available in the environment the application will be deployed: maybe the company you are building the application for already has database servers deployed. 
+If ever you are free to choose any database as a backend, your choice should be driven by what kind of operations you want to make on these databases. 
+For example, SQL databases are designed to store tabular data, and they tend to be very fast when it comes to reading data: so if you have one or more large data.frames you want to use inside your application, and with no specific update of these data, an SQL backend can be  the perfect choice. 
+On the other hand, a NoSQL database like MongoDB will be faster when it comes to doing write operation, and can store any kind of objects: for example, `{hexmake}` can use a MongoDB backend to store RDS files. 
+But that comes with a price: read are a little bit slower, and you might have to work a little bit more on handling the JSON results that come out of MongoDB.
+
 Covering all the available type of databases and the packages associated with each is a very, very large topic: there are dozens of database systems, and as many (if not more) packages to interact with them. 
 For a more extensive coverage of using databases in R, please follow these resources: 
 
