added content about deployment

--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title: "Engineering Production-Grade Shiny Apps"
 author: "Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard"
 date: "`r Sys.Date()`"
 documentclass: krantz
-bibliography: [book.bib, packages.bib]
+bibliography: [book.bib, packages.bib, manualpackage.bib]
 biblio-style: apalike
 link-citations: yes
 colorlinks: yes
