More content on workflow

--- a/05-workflow.Rmd
+++ b/05-workflow.Rmd
@@ -14,6 +14,9 @@ In this chapter, we will give an brief overview of the different steps of this w
 Of course, as with any workflow, this one is not a one-size-fits-all solution: all projects are unique, with technical requirements, specific planning and team of coder(s).
 But we think that following this workflow will help you get good habits when it comes to structuring your application project, even more if you know from day one that the application you are going to work on is a large application, be it in term of code base, complexity, or time. 
 
+Note that the ideas behind this workflow, and its process, could be used outside of a Shiny project: it can be applied to any coding project, even outside of the R world. 
+Of course, the tools presented in this book are R and Shiny specific, but the general ideas can be bootstrapped to be used outside of this context.
+
 ## Part 1: Design 
 
 The first part of the workflow is the __design__ part. 
@@ -75,7 +78,13 @@ In this third part, you will work on the core engine of the application, making 
 
 This step of the workflow is cover in the _Building app with `{golem}`_, a chapter that presents the various functions you can use to build your application, _i.e_ the one you will be using to combine your back-end and front-end.
 
-In this step, we will cover: adding dependencies, organizing modules and functions, adding tests, documenting , and using the internal `dev` functions from `{golem}`.
+In this step, we will cover: 
+
++ How to handle dependencies in your project, _i.e_ how to use leverage external libraries inside your project
++ How to organize modules and functions inside your project
++ How to add tests for the back-end of your application (testing will be covered in more depth in Part 4) 
++ How to document your application and its codebase, and how to add code coverage and continuous integration
++ How to leverage the internal `dev` functions from `{golem}` to modify the behavior of specific functions based on an `option()`
 
 ## Part 4: Strengthen 
 
@@ -101,7 +110,19 @@ This chapter will also cover `{renv}` and `Docker`, two essential tools for deve
 To _Deploy_ is to send your application into production once it is built.
 
 Being exhaustive here would be an impossible task: there are countless ways to make your application accessible to its targeted users, but we will try to cover some basics in this part. 
+And of course, where and how you will be deploying your application depends of a lot of parameters. 
+For example, who are the end users, and how do they want to use your application?
+If the end users are familiar with R and use it on a daily basis, they might be looking for an application that runs with `library(app)`, _i.e_ they need the application to be available as an R package they can install on their machine. 
+If the end users are not coders, they might need the application to be available only as a web application, so they just have to open a browser and navigate to an URL. 
+Both these cases raise other questions: how to make the package available on a repository so that R users can get it with `install.packages()`? 
+If the application is to be made available on an URL, how will it be deployed? 
+What deployment server is available to you, or to the company ordering the application? 
+These questions (and more) will be covered in the _Deploy_ part of this book. 
 
-In this part, we will quickly present a series of methods to deploy your application on various environments, notably sharing your application as a package, sending it to an RStudio platform, or building a Docker image to serve your app on a cloud provider. 
+In this part, we will present a series of methods to prepare your application to be deployed on various environments, notably:
+
++ Sharing your application as a package so that it can be installed manually, through GitHub, or shared on a package repository like the CRAN or BioConductor 
++ Sending it to an RStudio platform
++ Building a Docker image to serve your app on a cloud provider. 
 
 This step of the workflow is covered in the _Deploy your application_ chapter.
