--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -12,7 +12,7 @@ Whatever your ambitions for your Shiny application are, you should take time tod
 
 A common thing you will hear about Shiny is that it is a good prototyping tool. 
 This can not be denied.
-Building a Proof of Concept (POC) for an app is relatively straightforward if you compare to what it needs to build applications in other languages. 
+Building a Proof of Concept (PoC) for an app is relatively straightforward if you compare to what it needs to build applications in other languages. 
 With Shiny, you can build a "it works on my machine" web application in a couple of hours, and show it to your team, your boss, your investors...
 Thanks to the way Shiny was designed, you do not have to care about websockets, ports, HTML, JavaScript libraries, and all the things that are elegantly bundled into Shiny. 
 
@@ -30,6 +30,8 @@ The larger the codebase, the harder it is to untangle everything and make it wor
 
 In this book, we will present a framework called `{golem}`, which is a toolbox for building production-grade Shiny applications. 
 Even if `{golem}` is focused on production, there is no reason not to use it for your proof of concepts: starting a new `{golem}` project is relatively straightforward, and even if you do not use the advanced features, you can use it for very small apps. 
+The benefit of starting straight inside a `{golem}` application really outweigh the cost. 
+We hear a lot the question "_When should I switch to `{golem}`?_", and the answer is simple: do not switch to `{golem}` , start with it. 
 That way, you are getting ready for complexity, and if, one day, you need to turn this small app into a production app, the foundations are there.
 
 ### Develop with the KISS principle
@@ -45,7 +47,7 @@ The story behind this principle is supposed to be that Kelly Johnson, lead engin
 
 This should be a principle to keep in mind when building application. 
 Indeed, large scale Shiny projects can lead to many people working on the code base, for a long period of time. 
-A large team means a variety of skills, with some common ground in Shiny development, but potentially various level when it comes to R, web development, or production engineering. 
+A large team means a variety of skills, with some common ground in Shiny development, but potentially various levels when it comes to R, web development, or production engineering. 
 So when choosing how and what to implement, try to make a rule to go for the simplest solution
 ^[Which might not be the most "elegant" solution, but production code requires pragmatism.
 ], _i.e._ the one that any common Shiny Developer would be able to understand and maintain. 
@@ -125,7 +127,7 @@ Do not worry if this sounds like a foreign language to you, we will get back to 
 
 #### Developers
 
-Developers will focus on small features.  
+Developers will focus on small features.
 If the person in charge has correctly separated the work between developers of the team, they will be focusing on one or more parts of the application, but do not need to know every single bit of what the application is doing. 
 In a perfect world, the application is split in various Shiny Modules, one module equals one file and each member of the team will be assigned to the development of one or more modules.
 
