content about minification

--- a/book.bib
+++ b/book.bib
@@ -107,3 +107,14 @@ Eprint = {arXiv:2001.10641},
  isbn = {9781492075516},
  url = {https://learning.oreilly.com/library/view/refactoring-at-scale/9781492075523/}
 }
+
+@inproceedings{Sakamoto2015,
+  doi = {10.1109/dinwc.2015.7054230},
+  url = {https://doi.org/10.1109/dinwc.2015.7054230},
+  year = {2015},
+  month = feb,
+  publisher = {{IEEE}},
+  author = {Yasutaka Sakamoto and Shinsuke Matsumoto and Seiki Tokunaga and Sachio Saiki and Masahide Nakamura},
+  title = {Empirical study on effects of script minification and {HTTP} compression for traffic reduction},
+  booktitle = {2015 Third International Conference on Digital Information,  Networking,  and Wireless Communications ({DINWC})}
+}
