Consistency on RStudio, GitHub and GitLab names.

--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -143,7 +143,7 @@ run_app()
 
 #### RStudio Connect, Shiny Server, shinyapps.io
 
-Sending a Shiny application to a Rstudio product currently requires placing an R script at the root of your package directory.
+Sending a Shiny application to a RStudio product currently requires placing an R script at the root of your package directory.
 
 To run  your application on these platforms, you will need to use a "standard" Shiny filename pattern, _i.e._ an `app.R` file or `ui.R` / `server.R`, and send the whole thing to the server. 
 To integrate your "Shiny App as a package" into Connect or Shiny Server, you can adopt two strategies: 
