--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -85,7 +85,7 @@ Let's focus on the architecture of the default `{golem}` app, and present what p
 library(magrittr)
 ```
 
-You can create a `{golem}` project, here called `golex`, with Rstudio "New project" creation or with command line:
+You can create a `{golem}` project, here called `golex`, with RStudio "New project" creation or with command line:
 
 ```{r 04-golem-7, eval=FALSE}
 golem::create_golem("golex")
