--- a/11-step-by-step-build.Rmd
+++ b/11-step-by-step-build.Rmd
@@ -238,7 +238,7 @@ You can set up various continuous integration services automatically by using fu
 + AppVeyor with `usethis::use_appveyor()`
 + GitLab CI with `use_gitlab_ci()`
 + Circle CI with `use_circleci()`
-+ Github Actions with `use_github_actions()`
++ GitHub Actions with `use_github_actions()`
 + Jenkins with `use_jenkins()`
 
 If ever you want to add badges to your `README` files for these services, `{usethis}` also comes with a series of functions to do just that: `use_travis_badge()`, `use_appveyor_badge()`, `use_circleci_badge()` and `use_github_actions_badge()`.
