--- a/12-step-by-step-secure.Rmd
+++ b/12-step-by-step-secure.Rmd
@@ -623,7 +623,7 @@ In this example, there is just one call to a script, one located at `renv/activa
 
 As we have initiated an empty project, we do not have any dependencies here. 
 If you run this command in a project that already has scripts and dependencies, `{renv}` will try to locate them all, and add them to this file. 
-Note that these packages can come from CRAN, Bioconductor, GitHub, Gitlab, 
+Note that these packages can come from CRAN, Bioconductor, GitHub, GitLab, 
 Bitbucket, and even local repositories. 
 
 The `renv/` folder contains a series of files that that store your settings and the necessary packages, using a structure that mimics a local repository.
@@ -821,7 +821,7 @@ At the time of writing these lines, there is no native support of `{renv}` (with
 Developers have their own R versions and operating systems.
 If you want to be able to correctly deploy your application, you will use a Docker container.
 Then, why not already developing inside a Docker container having the exact same architecture than the one you will deploy ?
-This is possible to use ["rocker" containers](https://hub.docker.com/r/rocker/r-ver) to build your application inside the container, using the embedded Rstudio Server or directly an exported R console.  
+This is possible to use ["rocker" containers](https://hub.docker.com/r/rocker/r-ver) to build your application inside the container, using the embedded RStudio Server or directly an exported R console.  
 You can even combine developing in a Docker container with the use of `{renv}`.
 
 #### Read more about Docker 
