--- a/13-secure.Rmd
+++ b/13-secure.Rmd
@@ -4,7 +4,7 @@
 
 "Friends do not let friends work on a coding project without version control." 
 You might have heard this before, without really considering what this means. 
-Or maybe you are convinced about this saying, but have not had the opportunity to use git, GitHub or Gitlab for versioning your applications. 
+Or maybe you are convinced about this saying, but have not had the opportunity to use git, GitHub or GitLab for versioning your applications. 
 If so, now is the time for a workflow change!
 
 ### Why Version Control?
@@ -104,7 +104,7 @@ Even when working alone.
 
 ### Issues
 
-If you are working with a remote tool with a graphical interface like Gitlab, GitHub or Bitbucket, there is a good chance you will be using issues. 
+If you are working with a remote tool with a graphical interface like GitLab, GitHub or Bitbucket, there is a good chance you will be using issues. 
 Issues are "notes" or "tickets" that can be used to track a bug or to suggest a feature. 
 This tool is crucial when it comes to project management: they are the perfect spot for organizing and discussing ideas, but also to have an overview of what has been done, what is currently done and what is left to be done. 
 Issue can also be used as a discussion medium with beta testers, clients or sponsors. 
@@ -116,7 +116,7 @@ In other words, when you send code to the centralized server, you can link this 
 
 ### With RStudio
 
-Git is very well integrated to the Rstudio IDE, and using `git` can be as simple as clicking on a button from time to time. 
+Git is very well integrated to the RStudio IDE, and using `git` can be as simple as clicking on a button from time to time. 
 If you are using RStudio, you will find a pull/push button, a stage & commit interface, a tool for visualizing differences in files. 
 Everything you need to get started is there. 
 
