--- a/14-deploy-with-golem.Rmd
+++ b/14-deploy-with-golem.Rmd
@@ -69,18 +69,18 @@ When using `{golem}`, you can open the `dev/03_deploy.R` and find the functions 
 
 At the time of writing this book, there are two main ways to deploy a shiny app on a server: 
 
-+ Rstudio's solutions
++ RStudio's solutions
 + A docker based solution
 
 ### RStudio Environments
 
-Rstudio proposes three services to deploy Shiny application : 
+RStudio proposes three services to deploy Shiny application : 
 
 + shinyapps.io, an on-premise solution that can serve Shiny application (freemium)
 
 + Shiny-server, a software you have to install on your own server, and that can be used to deploy multiple applications (you can find either an open source or a professional edition)
 
-+ Rstudio connect, a server-based solution that can deploy Shiny applications and markdown documents (and other kind of content)
++ RStudio connect, a server-based solution that can deploy Shiny applications and markdown documents (and other kind of content)
 
 Each of these platforms has its own function to create an `app.R` file that is to be used as a launch script of each platform.
 
